# stemforge

./: .gitignore  README.md  ep133_bpm_writer.py  ep133_bpm_writer_v2.py  ep133_bpm_writer_v3.py  generate_static.py  generate_static_onnx.py  install.sh  music_ai_pricing.md  pyproject.toml  requirements-full.txt  requirements-local.txt  requirements-remote.txt  setup.html  setup.md  stemforge-claude-code-spec.md  test_musicai.py  the_champ_30s.wav.asd  triage_FIX_convo.md
.claude/: CLAUDE.max-plugin-fit.md  CLAUDE.md  settings.json
.claude/agents/: architect.md  engineer.md  operator.md  reviewer.md
.claude/sessions/: architect-170200.json  engineer-fusion-revival.json
.claude/skills/: design.md  plan.md  review.md  simplify.md
.github/: SECRETS.md
.github/workflows/: ci.yml  release.yml
batch/: StemForge_Batch_Pipeline_Spec.docx  TODO_first_run.md  first_run_tracklist.md  run_batch.py  stemforge_batch.py
docs/: beat_dashboard_guide.md  clip-export-button-wiring.md  config-driven-loader.md  device_packaging_research.md  ep133-archive-roundtrip-capture.md  ep133-loader-extraction.md  ep133-song-export-workflow.md  feature-backlog.md  instrument-rack-quadrant-setup.md  launchpad-setup.md  m4l-device-status.md  node-script-deep-reseaarch-RESULTS.md  node-script-deep-research.md  path2-shell-rewrite-plan.md  postmortem-2026-04-19.md  remote_debug.md  research-drum-isolation-models.md  session-handoff-audio-validation.md  session-handoff-launchpad-mvp.md  skeleton-als-capture.md  stemforge_ui_spec.html  system-design.md  uat-curation-engine-v2-phase1.md  user-guide.md  v0-ableton-validation.md  v0-session-handoff-2026-04-15.md  v0-ship-spec.md
docs/ep133-song-triage/: reference_minimal.ppak  snapshot.json  test-guide.md  triage-notes-2026-04-26.md  triage.md
docs/exec-plans/: ep133-song-export.md
grooves/: 01 - The Champ (Original Version).wav.asd
m4l/: README_M4L.md  StemForgeDevice.maxpat  StemForgeLoader.amxd  StemForgeTemplateBuilder.amxd  build_guide.html  build_guide_device.html  build_guide_loader.html  dev_log.html  package.json  stemforge_bridge.js  stemforge_loader.js  stemforge_lom.js  stemforge_template_builder.js  user_guide.html
pipelines/: curation.json  curation.yaml  curation_nopad.yaml  curation_nopad_perf.yaml  curation_nopad_phrase2.yaml  curation_nopad_section.yaml  curation_session.yaml  curation_session_drums4.yaml  default.json  default.yaml  production_idm.json  production_idm.yaml
presets/: brutalism.json  clean.json  clean.yaml  drums_only.json  idm_production.json  idm_production.yaml  spectral_glitch.json
specs/: StemForge_Suite_Spec.docx  curation-quality-spec.md  device-ui-production-mode.md  device_param_scraper_spec.md  ep133-arrangement-song-export.md  ep133-hybrid-session-spec.md  ep133-protocol-complete.md  ep133_pad_assign_capture_plan.md  ep133_pad_assign_capture_progress.md  ep133_playwright_exporter.md  ep133_playwright_progress.md  ep133_port_spec.md  ep133_protocol_capture_plan.md  ep133_protocol_spec.md  ep133_session_handoff_2026-04-24_eod.md  ep133_session_state_2026-04-24.md  ep133_song_mode_capture_plan.md  ep133_sysex_port_spec.md  ep133_sysex_upload_plan.md  ep133_sysex_upload_plan_v2.md  ep133_validation_guide.md  hardware-export-targets.md  idm-preset-track-specs.md  m4l-integrated-forge-device.md  manifest-spec.md  midi-quadrant-router.md  processing-config-spec.md  processing_config_spec.md  stemforge-curation-v2-spec.md  stemforge-ep133-export-spec.md  stemforge_device_ui_contract.md  stemforge_device_ui_spec_LATEST.md  stemforge_song_loader.md  stemforge_song_loader_UPDATE.md
stemforge/: analyzer.py  beat_align.py  beat_detect.py  cli.py  config.py  curation_schema.py  curator.py  drum_classifier.py  layout.py  manifest.py  manifest_schema.py  midi_extractor.py  oneshot.py  palette.py  segmenter.py  slicer.py
stemforge/_vendor/: __init__.py  demucs_patched.py
stemforge/backends/: base.py  demucs.py  lalal.py  modal_backend.py  musicai.py
stemforge/data/: ableton_colors.json  live_devices.json
stemforge/drum_separator/: __init__.py  larsnet.py
stemforge/exporters/: __init__.py  base.py  chompi.py  ep133.py  ep133_mapping.py  ep133_stem_export.py  ep133_upload.py  ep133_v2.py
tests/: test_beat_align.py  test_beat_detect.py  test_exporters.py  test_forge.py  test_js_bridge.py  test_m4l_export_clips.py  test_manifest_schema.py  test_midi_extractor.py  test_modal_backend.py  test_oneshot.py  test_packaging.py  test_palette.py  test_segmenter.py
tests/ep133/: conftest.py  test_assign_pad.py  test_capture_reference.py  test_ep133_stem_export.py  test_packing.py  test_pad_record.py  test_payloads.py  test_ppak_writer.py  test_sample_params.py  test_song_format.py  test_song_integration.py  test_song_resolver.py  test_song_synthesizer.py
tests/js_mocks/: max_api.js  priority_chain_fixture.js  sandbox.js  test_arrangement_reader.test.js  test_preset_resolution.test.js
tools/: beat_curator.py  beat_dashboard.html  beat_dashboard.py  ep133_bpm_matrix.py  ep133_capture_reference.py  ep133_load_hybrid_session.py  ep133_load_project.py  m4l_export_clips.py  reslice_and_curate.py  run_js_tests.sh  run_plans.py  sf_deploy.py  sf_remote.py  validate_audio.py
v0/: DAG.md  PIVOT.md  PLAN.md  SHARED.md
v0/assets/: README.md  skeleton.als
v0/interfaces/: device.yaml  ndjson.schema.json  tracks.yaml
v0/src/: stemforge_curate_bars.py
v0/src/A/: .gitignore  CMakeLists.txt
v0/src/A/cli/: main.cpp
v0/src/A/include/: stemforge.h
v0/src/A/src/: sf_beat.hpp  sf_demucs.hpp  sf_lib.cpp  sf_manifest.hpp  sf_model_manifest.hpp  sf_ndjson.hpp  sf_slicer.hpp  sf_stft.hpp  sf_wav.hpp
v0/src/A/tests/: test_framework.hpp  test_main.cpp  test_manifest.cpp  test_ndjson.cpp  test_slugify.cpp  test_stft.cpp
v0/state/: .gitkeep
v0/tests/: README.md  conftest.py  test_als.py  test_amxd.py  test_arrangement_reader.py  test_binary.py  test_pkg_install.py  validate-ndjson.py
v0/tracks/: A-native-binary.md  A0-onnx-conversion.md  B-package-split.md  C-m4l-device.md  D-als-template.md  E-installer.md  F-cicd.md  (+1 more)
(+158 files in other folders)
